<resources>
    <string name="app_name">Aura Interior Project Admin</string>
    <string name="key_maps" translatable="false">AIzaSyCy_DhxB1vF-WvHSYlOydmi19MD82nK9gM</string>
    <string name="add">Tambah Pemesanan Baru</string>
    <string name="maps">Peta</string>
    <string name="no_data">No Data</string>
    <string name="name">Nama</string>
    <string name="phone">Telepon</string>
    <string name="address">Alamat</string>
    <string name="latitude">Koordinat Pemesan (Latitude)</string>
    <string name="longitude">Koordinat Pemesan (Longitude)</string>
    <string name="type">Tipe Wallpaper yang dipesan</string>
    <string name="save">Simpan</string>
    <string name="title_add">Tambah Data Pemesan</string>
    <string name="cluster_title">Pemetaan Lokasi Pembeli</string>
    <string name="location">Lokasi</string>
    <string name="detail_title">Detail Informasi Pemesan</string>
    <string name="date">Tanggal Order</string>
    <string name="type_wallpaper">tipe wallpaper</string>
    <string name="type_wallpaper_new">tipe wallpaper\n(klik untuk mengubah nama)</string>
    <string name="customer_name">Nama</string>
    <string name="address_customer">Alamat</string>
    <string name="phone_customer">Nomor Telepon</string>
    <string name="type_wallpaper_customer">Tipe Wallpaper yang dipesan</string>
    <string name="order_status">Status Pesanan\n(Klik untuk mengubah status pesanan)</string>
    <string name="roll_estimation_customer">Perkiraan Jumlah Roll Wallpaper yang diterima</string>
    <string name="price_estimation_customer">Perkiraan Total Biaya yang Harus Dibayarkan</string>
    <string name="order_date">Tanggal Pemesanan</string>
    <string name="waiting_status">Menunggu</string>
    <string name="order_accept_status">Pesanan Diterima</string>
    <string name="order_cancel_status">Pesanan Dibatalkan</string>
    <string name="alert_title_order_status">Pilih Status Pesanan :</string>
    <string name="ok">Oke</string>
    <string name="your_order_status">Status Pesanan Anda</string>
    <string name="add_wallpaper">Tambah Wallpaper</string>
    <string name="list_wallpaper">Daftar Wallpaper</string>
    <string name="select_image">Pilih Gambar</string>
    <string name="add_product">Tambah Produk</string>
    <string name="take_or_choose">Pilih Gambar dari Galeri atau Kamera</string>
    <string name="choose_from_gallery">Pilih dari Galeri</string>
    <string name="take_from_camera">Pilik dari Kamera</string>
    <string name="upload_data_title">Upload Data</string>
    <string name="select_wallpaper_image">Pilih Gambar Wallpaper</string>
    <string name="alert">Peringatan!!</string>
    <string name="check_data_message">Apakah data yang dimasukkan sudah benar?</string>
    <string name="warning">Perhatian</string>
    <string name="wallpaper_list">Daftar Wallpaper</string>
    <string name="change_image">Ganti Gambar</string>
    <string name="delete">Hapus</string>
    <string name="detail_product">Detail Produk</string>
    <string name="choose_month">Pilih Bulan</string>
    <string name="choose_year">Pilih Tahun</string>
    <string name="export_pdf">Ekspor Laporan ke PDF</string>
    <string name="export_csv">Ekspor Laporan ke Excel</string>
    <string name="export_report">Ekspor Laporan</string>
</resources>
